--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    - name: Install Chrome browser
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
 
     - name: Run Tests
       run: |
